--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "express-session": "^1.15.6",
         "http-proxy": "^1.17.0",
         "passport": "^0.4.0",
-        "passport-oauth2": "^1.4.0"
+        "passport-oauth2": "^1.4.0",
+        "request": "^2.88.0"
     }
 }
